--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.sombreadoRetro {
+    box-shadow: 0.5px 0.5px 2px 0.5px rgba(0, 0, 0, 1);
+}
