--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,209 @@
 @tailwind components;
 @tailwind utilities;
 
-
 .sombreadoRetro {
-    box-shadow: 0.5px 0.5px 2px 0.5px rgba(0, 0, 0, 1);
+  box-shadow: 0.5px 0.5px 2px 0.5px rgba(0, 0, 0, 1);
+}
+
+@keyframes movimiento0 {
+  0% {
+    z-index: 10;
+    bottom: 0px;
+    left: 0px;
+    background-color: green;
+    width: 1rem;
+    height: 1rem;
+  }
+  25% {
+    z-index: 10;
+    bottom: 40%;
+    left: 0px;
+    background-color: green;
+    width: 1rem;
+    height: 1rem;
+  }
+  50% {
+    z-index: 10;
+    bottom: 40%;
+    left: 0px;
+    background-color: green;
+    width: 100%;
+    height: 1rem;
+  }
+  75% {
+    z-index: 10;
+    bottom: 40%;
+    left: 0px;
+    background-color: green;
+    width: 1rem;
+    height: 1rem;
+  }
+  100% {
+    z-index: 10;
+    bottom: 0px;
+    left: 0px;
+    background-color: green;
+    width: 1rem;
+    height: 1rem;
+  }
+}
+
+@keyframes movimiento1 {
+  0% {
+    z-index: 0;
+    right: 10%;
+    top: 20%;
+    background-color: red;
+    width: 1rem;
+    height: 1rem;
+  }
+  25% {
+    z-index: 0;
+    right: 30%;
+    top: 30%;
+    background-color: red;
+    width: 2rem;
+    height: 2rem;
+  }
+  50% {
+    z-index: 0;
+    right: 30%;
+    top: 30%;
+    background-color: red;
+    width: 1rem;
+    height: 2rem;
+  }
+  75% {
+    z-index: 0;
+    right: 30%;
+    top: 30%;
+    background-color: red;
+    width: 2rem;
+    height: 1rem;
+  }
+  100% {
+    z-index: 0;
+    right: 10%;
+    top: 20%;
+    background-color: red;
+    width: 1rem;
+    height: 1rem;
+  }
+}
+
+@keyframes movimiento2 {
+  0% {
+    z-index: 10;
+    bottom: 5%;
+    right: 10%;
+    background-color: orange;
+    width: 1rem;
+    height: 1rem;
+  }
+  50% {
+    z-index: 10;
+    bottom: 5%;
+    right: 10%;
+    background-color: orange;
+    width: 80%;
+    height: 0.5rem;
+  }
+  100% {
+    z-index: 10;
+    bottom: 5%;
+    right: 10%;
+    background-color: orange;
+    width: 1rem;
+    height: 1rem;
+  }
+}
+
+@keyframes movimiento3 {
+  0% {
+    z-index: 50;
+    bottom: 10%;
+    right: 15%;
+    border: 1px;
+    border-style: solid;
+    rotate: 0rad;
+    border-color: white;
+    background-color: 0 0 0 0;
+    width: 1rem;
+    height: 1rem;
+  }
+  25% {
+    z-index: 50;
+    bottom: 20%;
+    right: 30%;
+    border: 1px;
+    border-style: solid;
+    rotate: 0rad;
+    border-color: white;
+    background-color: 0 0 0 0;
+    width: 1rem;
+    height: 1rem;
+  }
+  50% {
+    z-index: 50;
+    bottom: 60%;
+    right: 45%;
+    border: 1px;
+    rotate: 6.28rad;
+    border-style: solid;
+    border-color: white;
+    background-color: 0 0 0 0;
+    width: 0.5rem;
+    height: 0.5rem;
+  }
+  90% {
+    z-index: 50;
+    bottom: 20%;
+    right: 30%;
+    border: 1px;
+    rotate: 6.28rad;
+    border-style: solid;
+    border-color: white;
+    background-color: 0 0 0 0;
+    width: 1rem;
+    height: 1rem;
+  }
+  100% {
+    z-index: 50;
+    bottom: 10%;
+    right: 15%;
+    border: 1px;
+    rotate: 6.28rad;
+    border-style: solid;
+    border-color: white;
+    background-color: 0 0 0 0;
+    width: 1rem;
+    height: 1rem;
+  }
+}
+
+@keyframes movimiento4 {
+  0% {
+    z-index: 20;
+    top: 0%;
+    left: 0%;
+    background-color: blue;
+    width: 1rem;
+    height: 1rem;
+  }
+  50% {
+    z-index: 20;
+    top: 0%;
+    left: 0%;
+    background-color: blue;
+    width: 100%;
+    height: 1rem;
+  }
+  100% {
+    z-index: 20;
+    top: 0%;
+    left: 0%;
+    background-color: blue;
+    width: 1rem;
+    height: 1rem;
+  }
 }
